--- a/products/package.json
+++ b/products/package.json
@@ -7,10 +7,10 @@
     "faker": "5.1.0",
     "html-webpack-plugin": "4.5.0",
     "webpack": "5.4.0",
-    "webpack-cli": "4.2.0",
+    "webpack-cli": "4.3.1",
     "webpack-dev-server": "3.11.0"
   },
   "scripts": {
-    "start": "webpack"
+    "start": "webpack serve"
   }
 }
