--- a/container/package.json
+++ b/container/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "faker": "5.1.0",
     "html-webpack-plugin": "4.5.0",
+    "nodemon": "^2.0.7",
     "webpack": "5.4.0",
     "webpack-cli": "4.3.1",
     "webpack-dev-server": "3.11.0"
