--- a/cart/package.json
+++ b/cart/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "faker": "5.1.0",
-    "html-webpack-plugin": "4.5.0",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.3.1",
-    "webpack-dev-server": "3.11.0"
+    "html-webpack-plugin": "^4.5.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "webpack serve"
