--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -2,7 +2,8 @@
   "name": "dashboard",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config config/webpack.prod.js",
+    "start": "webpack serve --config config/webpack.dev.js"
   },
   "dependencies": {
     "chart.js": "^2.9.4",
