--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "json-server --watch db.json"
+    "start": "json-server --watch db.json --middlewares middleware.js"
   },
   "dependencies": {
     "json-server": "^0.16.3"
