--- a/shared-lib/package.json
+++ b/shared-lib/package.json
@@ -5,7 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-cache-adapter": "^2.7.0",
+    "axios-extensions": "^3.1.3",
     "broadcast-channel": "^3.4.1",
-    "broadcastchannel-polyfill": "^1.0.1"
+    "broadcastchannel-polyfill": "^1.0.1",
+    "localforage": "^1.9.0",
+    "localforage-memoryStorageDriver": "^0.9.2",
+    "object-hash": "^2.1.1"
   }
 }
